src/objects/Lost_to_Competitor_Surveys__c.object
<CustomObject>
    <description>Records of calls to customers lost to competitors</description>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>21st Century Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akeena Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aztec Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurora Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berks Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Currents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endless Mountains Solar Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenspring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GroSolar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maggio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redding Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Gaines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar E-World</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suntricity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trinity Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Lost_to_Competitor_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Factors_Involved__c</fullName>
        <label>Factors Involved</label>
        <picklist>
            <picklistValues>
                <fullName>Design [Wanted Higher Wattage Panels]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design [Wanted Sharp Panels]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design [Wanted Sunpower Panels]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design [Wanted Other Panels]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design [Wanted Line Side Tap]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Financing Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Operating History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Communication/Follow-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confusing or Mistaken Designs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred a Local Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by Financing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seemed Too Large and Impersonal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Inverters_Used__c</fullName>
        <label>Inverters Used</label>
        <picklist>
            <picklistValues>
                <fullName>Enphase Micros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Micros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Inverters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Modules_Used__c</fullName>
        <label>Modules Used</label>
        <picklist>
            <picklistValues>
                <fullName>BP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kyocera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schuco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suntech</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_from_Call__c</fullName>
        <label>Notes from Call</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Lost to Comp</label>
    <nameField>
        <label>Lost to Competitor Surveys Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lost to Comp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>